fix: bounce-scroll on iphones

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -1,5 +1,28 @@
-body{
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html,body{
     background-color: #EBEBEB;
     font-family: 'SF Pro Display', Roboto, emoji, sans-serif;
+    overscroll-behavior-y: none;
+    width:100%;
+    min-height:100vh;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: darkscale;
+    text-rendering: optimizeLegibility;
+    /* position: fixed; */
+    /* overflow: hidden; */
+}
+
+#app {
+    width:100%;
+    height:100%;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch; /* для плавности на iOS */
 }
 
